--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": ["task", "api", "management"],
+  "keywords": [
+    "task",
+    "api",
+    "management"
+  ],
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
@@ -18,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
+    "janusdoc": "^0.1.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0"
   }
