--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "evalite": "^0.19.0",
     "janusdoc": "^0.1.0",
     "tsx": "^4.19.0",
-    "typescript": "^5.6.0"
+    "typescript": "^5.6.0",
+    "vitest": "^4.0.16"
   }
 }
