--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "eval": "evalite evals/janusdoc.eval.ts",
-    "eval:watch": "evalite evals/janusdoc.eval.ts --watch",
+    "eval:watch": "evalite watch",
     "janusdoc:run": "janusdoc run"
   },
   "keywords": [
